--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
 
     <!-- Style.css -->
     <link rel="stylesheet" href="style.css" />
-    <!-- Logo Title Bar -->
-    <link rel="icon" href="IMG/logo 1.png" type="image/icon" />
 
+    <!-- Logo Title Bar -->
+    <link rel="icon" href=../IMG/logo/logo_1.PNG" type="image/icon" />
+    <!-- <img src="IMG/logo/logo_1.png" alt=""> -->
     <title>Panel Indo</title>
   </head>
 
@@ -25,7 +26,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="IMG/logo 1.png" alt="Logo" width="30" class="d-inline-block align-text-top me-3" />
+        <img src="../IMG/logo/logo_1.png" alt="Logo" width="30" class="d-inline-block align-text-top me-3" />
         Panelindo</a
       >
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,11 +67,11 @@
                  kami ada yang ingin anda butuhkan.</p>
                 <button class="btn-temukan-panel">Temukan Panel</button>
                 <a href="#">
-                  <img src="IMG/gambar_panel/Vector.png"alt="" class="position-vector">
+                  <img src="../IMG/gambar_panel/Vector.png"alt="" class="position-vector">
                 </a>
           </div>
        </div>
-       <img src="IMG/gambar_panel/Hero_section.png" alt="" class="position-absolute end-0 bottom-0 img-hero">
+       <img src="../IMG/gambar_panel/Hero_section.png" alt="" class="position-absolute end-0 bottom-0 img-hero">
     </div>
   </section>
 
@@ -90,7 +91,7 @@
           <div class="col-md-4 text-center">
             <div class="card-layanan">
               <div class="circle-icon position-relative mx-auto">
-                <img src="IMG/gambar_panel/section/beli-removebg-preview__1_-removebg-preview (1).png" alt="" class="position-absolute top-50  start-50 translate-middle">
+                <img src="../IMG/gambar_panel/section/beli-removebg-preview__1_-removebg-preview (1).png" alt="" class="position-absolute top-50  start-50 translate-middle">
               </div>
               <h3 class="mt-4">Panel Baru</h3>
               <p class="mt-3">Panel impian apa yang <br>
@@ -103,7 +104,7 @@
           <div class="col-md-4 text-center">
             <div class="card-layanan">
               <div class="circle-icon position-relative mx-auto">
-                <img src="IMG/gambar_panel/section/delivery-removebg-preview (2).png" alt="" class="position-absolute top-50  start-50 translate-middle">
+                <img src="../IMG/gambar_panel/section/delivery-removebg-preview (2).png" alt="" class="position-absolute top-50  start-50 translate-middle">
               </div>
               <h3 class="mt-4">Panel Baru</h3>
               <p class="mt-3">Panel impian apa yang <br>
@@ -116,7 +117,7 @@
           <div class="col-md-4 text-center">
             <div class="card-layanan">
               <div class="circle-icon position-relative mx-auto">
-                <img src="IMG/gambar_panel/section/images-removebg-preview (1).png" alt="" class="position-absolute top-50  start-50 translate-middle">
+                <img src="../IMG/gambar_panel/section/images-removebg-preview (1).png" alt="" class="position-absolute top-50  start-50 translate-middle">
               </div>
               <h3 class="mt-4">Panel Baru</h3>
               <p class="mt-3">Panel impian apa yang <br>
@@ -168,7 +169,7 @@
             <div class="input-group input-cari mb-3">
               <button class="button-secondary dropdown-toggle" type="button" 
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="IMG/gambar_panel/vector_panel.png" alt="">
+              <img src="../IMG/gambar_panel/vector_panel.png" alt="">
               Tipe Panel</button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -181,7 +182,7 @@
                <!-- dropdown range harga -->
               <button class="button-secondary input-cari dropdown-toggle" type="button" 
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="IMG/gambar_panel/vector_harga.png" alt="">
+              <img src="../IMG/gambar_panel/vector_harga.png" alt="">
               Range Harga</button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -203,7 +204,7 @@
             <div class="input-group input-cari mb-3">
               <button class="button-secondary dropdown-toggle" type="button" 
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="IMG/gambar_panel/vector_panel.png" alt="">
+              <img src="../IMG/gambar_panel/vector_panel.png" alt="">
               Tipe Panel</button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -216,7 +217,7 @@
                <!-- dropdown range harga -->
               <button class="button-secondary input-cari dropdown-toggle" type="button" 
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="IMG/gambar_panel/vector_harga.png" alt="">
+              <img src="../IMG/gambar_panel/vector_harga.png" alt="">
               Range Harga</button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -238,7 +239,7 @@
             <div class="input-group input-cari mb-3">
               <button class="button-secondary dropdown-toggle" type="button" 
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="IMG/gambar_panel/vector_panel.png" alt="">
+              <img src="../IMG/gambar_panel/vector_panel.png" alt="">
               Tipe Panel</button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -251,7 +252,7 @@
                <!-- dropdown range harga -->
               <button class="button-secondary input-cari dropdown-toggle" type="button" 
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="IMG/gambar_panel/vector_harga.png" alt="">
+              <img src="../IMG/gambar_panel/vector_harga.png" alt="">
               Range Harga</button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -271,7 +272,7 @@
     </div>
     </section>
 
-    <!-- Section Rekomendasi Rumah -->
+    <!-- Section Rekomendasi Panel -->
     <section id="Rekomendasi">
         <div class="container">
             <div class="row-mb-4">
@@ -283,7 +284,7 @@
               <div class="row mt-5 ">
                 <div class="col-4 mb-4 ">
                   <div class="card p-2" styLe="width:22rem;">
-                    <img src="IMG/Rekomendasi Panel/Panel surya.png" alt="">
+                    <img src="../IMG/Rekomendasi Panel/Panel surya.png" alt="">
                     <div class="card-body">
                       <h4>IDR. 5.000.000.00</h4>
                       <p class="mb-4">Jl. Kaliombo Raya No.96B<br><span class="text-danger ">Order Now</span></p>
@@ -293,7 +294,7 @@
                 <!--  -->
                 <div class="col-4 mb-4">
                   <div class="card p-2" styLe="width:22rem;">
-                    <img src="IMG/Rekomendasi Panel/Panel surya.png" alt="">
+                    <img src="../IMG/Rekomendasi Panel/Panel surya.png" alt="">
                     <div class="card-body">
                       <h4>IDR. 5.000.000.00</h4>
                       <p class="mb-4">Jl. Kaliombo Raya No.96B<br><span class="text-danger ">Order Now</span></p>
@@ -303,7 +304,7 @@
                 <!--  -->
                 <div class="col-4 mb-4">
                   <div class="card p-2" styLe="width:22rem;">
-                    <img src="IMG/Rekomendasi Panel/Panel surya.png" alt="">
+                    <img src="../IMG/Rekomendasi Panel/Panel surya.png" alt="">
                     <div class="card-body">
                       <h4>IDR. 5.000.000.00</h4>
                       <p class="mb-4">Jl. Kaliombo Raya No.96B<br><span class="text-danger ">Order Now</span></p>
@@ -313,7 +314,7 @@
                 <!--  -->
                 <div class="col-4 mb-4">
                   <div class="card p-2" styLe="width:22rem;">
-                    <img src="IMG/Rekomendasi Panel/Panel surya.png" alt="">
+                    <img src="../IMG/Rekomendasi Panel/Panel surya.png" alt="">
                     <div class="card-body">
                       <h4>IDR. 5.000.000.00</h4>
                       <p class="mb-4">Jl. Kaliombo Raya No.96B<br><span class="text-danger ">Order Now</span></p>
@@ -323,7 +324,7 @@
                 <!--  -->
                 <div class="col-4 mb-4">
                   <div class="card p-2" styLe="width:22rem;">
-                    <img src="IMG/Rekomendasi Panel/Panel surya.png" alt="">
+                    <img src="../IMG/Rekomendasi Panel/Panel surya.png" alt="">
                     <div class="card-body">
                       <h4>IDR. 5.000.000.00</h4>
                       <p class="mb-4">Jl. Kaliombo Raya No.96B<br><span class="text-danger ">Order Now</span></p>
@@ -333,7 +334,7 @@
                 <!--  -->
                 <div class="col-4 mb-4">
                   <div class="card p-2" styLe="width:22rem;">
-                    <img src="IMG/Rekomendasi Panel/Panel surya.png" alt="">
+                    <img src="../IMG/Rekomendasi Panel/Panel surya.png" alt="">
                     <div class="card-body">
                       <h4>IDR. 5.000.000.00</h4>
                       <p class="mb-4">Jl. Kaliombo Raya No.96B<br><span class="text-danger ">Order Now</span></p>
@@ -355,7 +356,7 @@
           </div>
           <div class="col-3">
             <button class="button-fitur">Lihat Semua..
-              <img src="IMG/gambar_panel/Vector.png" alt="" class="ms-4 ">
+              <img src="../IMG/gambar_panel/Vector.png" alt="" class="ms-4 ">
             </button>
           </div>
         </div>
@@ -364,7 +365,7 @@
           <div class="row">
             <div class="col-12 d-flex justify-content-start">
               <div class="card-fitur me-3 position-relative">
-                <img src="IMG/gambar_panel/card_fitur/fitur2.png" alt="">
+                <img src="../IMG/gambar_panel/card_fitur/fitur2.png" alt="">
                 <div class="overlay position-absolute top-0 bottom-0 start-0 end-0 w-100 h-100">
                   <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
                     <h5>
@@ -378,7 +379,7 @@
               </div>
               <!-- card 2 -->
               <div class="card-fitur me-3 position-relative">
-                <img src="IMG/gambar_panel/card_fitur/fitur2.png" alt="">
+                <img src="../IMG/gambar_panel/card_fitur/fitur2.png" alt="">
                 <div class="overlay position-absolute top-0 bottom-0 start-0 end-0 w-100 h-100">
                   <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
                     <h5>
@@ -392,7 +393,7 @@
               </div>
               <!-- card 3 -->
               <div class="card-fitur me-3 position-relative">
-                <img src="IMG/gambar_panel/card_fitur/fitur2.png" alt="">
+                <img src="../IMG/gambar_panel/card_fitur/fitur2.png" alt="">
                 <div class="overlay position-absolute top-0 bottom-0 start-0 end-0 w-100 h-100">
                   <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
                     <h5>
@@ -406,7 +407,7 @@
               </div>
               <!-- card 4 -->
               <div class="card-fitur me-3 position-relative">
-                <img src="IMG/gambar_panel/card_fitur/fitur2.png" alt="">
+                <img src="../IMG/gambar_panel/card_fitur/fitur2.png" alt="">
                 <div class="overlay position-absolute top-0 bottom-0 start-0 end-0 w-100 h-100">
                   <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
                     <h5>
@@ -421,11 +422,11 @@
             </div>
           </div>
           <button class="button-arrow-left position-absolute start-0 top-50 translate-middle-y">
-            <img src="IMG/gambar_panel/card_fitur/arraw_L.png" alt="">
+            <img src="../IMG/gambar_panel/card_fitur/arraw_L.png" alt="">
           </button>
   
           <button class="button-arrow-right position-absolute end-0 top-50 translate-middle-y">
-            <img src="IMG/gambar_panel/card_fitur/arraw_R.png" alt="">
+            <img src="../IMG/gambar_panel/card_fitur/arraw_R.png" alt="">
           </button>
         </div>
       </div>
@@ -443,30 +444,30 @@
                           <h6>Kontak</h6>
                           <!-- alamat -->
                           <div>
-                            <img src="IMG/contact/gedung.png" alt="">
+                            <img src="../IMG/contact/gedung.png" alt="">
                             <a href="#">Jl. Kaliombo Raya No.96B Kediri 
                               Indonesia</a>
                           </div>
                           <!-- nomor telepon -->
                           <div>
-                            <img src="IMG/contact/ri_whatsapp-fill.png" alt="">
+                            <img src="../IMG/contact/ri_whatsapp-fill.png" alt="">
                             <a href="#">0852-2556-9653</a>
                           </div>
                           <!-- email -->
                           <div>
-                            <img src="IMG/contact/line-md_email.png" alt="">
+                            <img src="../IMG/contact/line-md_email.png" alt="">
                             <a href="#">panelindo@gmail.com</a>
                           </div>
                           <!-- SOSMED -->
                           <h6>Social Media</h6>
                           <a href="#">
-                            <img src="IMG/contact/ant-design_facebook-outlined.png" alt="">
+                            <img src="../IMG/contact/ant-design_facebook-outlined.png" alt="">
                           </a>
                           <a href="#">
-                            <img src="IMG/contact/bi_instagram.png" alt="">
+                            <img src="../IMG/contact/bi_instagram.png" alt="">
                           </a>
                           <a href="#">
-                            <img src="IMG/contact/iconoir_twitter.png" alt="">
+                            <img src="../IMG/contact/iconoir_twitter.png" alt="">
                           </a>
                         </div>
                 </div>
